--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="i8C-6h-qxj" id="kcj-Ow-MYH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="nrD-xA-cfb"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="nrD-xA-cfb">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nKq-48-XAU">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="pressedAddButton:" destination="i8C-6h-qxj" id="uBe-Du-NuO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jyb-6T-HUZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
